# gtkwave

./: .gitattributes  .gitignore  AUTHORS  CHANGELOG.md  LICENSE.TXT  README.md  autogen.sh  changes_from_gtk2.txt  configure.ac  distro_from_svn.sh  meson.build  meson_options.txt  muon_fmt.ini  wave_locale.h
contrib/bundle_for_osx/: Makefile.am  gtk_diff_against_modulesets.patch  gtk_diff_against_modulesets_2.patch  gtk_diff_against_modulesets_3.patch  gtkwave.icns  gtkwave.pl  gtkwave_bin_launcher.sh  gtkwave_savefiles.icns  gtkwaverc
contrib/fst_jni/: Makefile.am  fst2Vcd.java  fstAPI.c  fstAPI.h  fstAPI.java  fstArrayType.java  fstAttrType.java  fstFileType.java  fstHier.java  fstHierType.java  fstMiscType.java  fstPackType.java  fstReader.java  fstSupplementalVarType.java  fstVarDir.java  fstVarType.java  fstWriterPackType.java
contrib/rtlbrowse/: Changelog.md  fgetdynamic.c  fgetdynamic.h  gwr-model.c  gwr-model.h  logfile.c  main.c  meson.build  splay.c  splay.h  stem_recurse.c  stem_recurse.h  tcl_helper.c  tree_widget.c  tree_widget.h  vlex.c  vlex.h  vlex.l  wavelink.h
contrib/vpi/: Makefile.am  sys_fst.c
gtkwave3/: AUTHORS  COPYING  ChangeLog  LICENSE.TXT  Makefile.am  Makefile.in  README  configure  configure.ac  distro_from_svn.sh
gtkwave3/contrib/: Makefile.in  stems.xsl
gtkwave3/contrib/bundle_for_osx/: Info-gtkwave.plist  Makefile.in  gtkwave.bundle  launcher.sh
gtkwave3/contrib/fsdb2vcd/: Makefile.in
gtkwave3/contrib/fst_jni/: Makefile.in  fstEnumValueType.java  zzz_test.csh
gtkwave3/contrib/json2stems/: Makefile.am  Makefile.in
gtkwave3/contrib/rtlbrowse/: Makefile.am  Makefile.in  fgetdynamic.c  jrb.h  logfile.c  stem_recurse.c  tcl_helper.c  tree_widget.c  wavelink.h
gtkwave3/contrib/wlf2vcd/: Makefile.in  wlf2vcd.c
gtkwave3/contrib/xml2stems/: Makefile.in  xml2stems.cc
gtkwave3/doc/: Makefile.in  gtkwave.odt
gtkwave3/examples/: Makefile.in  des.gtkw  des.tcl  des.v  gtkwaverc
gtkwave3/man/: Makefile.am  Makefile.in  fstminer.1  ghwdump.1  gtkwave.1  gtkwaverc.5  vcd2fst.1
gtkwave3/share/: Makefile.in
gtkwave3/share/appdata/: Makefile.in  gtkwave.appdata.xml  io.github.gtkwave.GTKWave.metainfo.xml
gtkwave3/share/applications/: Makefile.in
gtkwave3/share/icons/: Makefile.in
gtkwave3/share/mime/: Makefile.am  Makefile.in
gtkwave3/src/: Makefile.am  Makefile.in  ae2.c  analyzer.c  analyzer.h  baseconvert.c  bitvec.c  busy.c  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  edgebuttons.c  entry.c  entry.h  extload.c  fetchbuttons.c  file.c  file.h  fonts.c  fonts.h  fsdb_wrapper_api.cc  fst.c  fst.h  ghw.c  ghwlib.c  ghwlib.h  globals.c  globals.h  gtk12compat.h  help.c  help.h  hiersearch.c  hiersearch.h  jrb.c  libghw.c  logfile.c  (+68 more)
gtkwave3/src/cocoa/: Makefile.in  alert_sheet.h  cocoa_misc.c
gtkwave3/src/helpers/: Makefile.am  Makefile.in  evcd2vcd.c  fst2vcd.c  fstminer.c  ghwdump.c  lxt2_read.c  lxt2vcd.c  vcd2fst.c  vcd2lxt.c  vcd2lxt2.c  vcd2vzt.c  vzt_read.c  vzt_write.c
gtkwave3/src/libbz2/: Makefile.am  Makefile.in
gtkwave3/src/liblzma/: Makefile.in
gtkwave3/src/libz/: Makefile.am  Makefile.in  example.c
gtkwave4/: .clang-format  .gitignore  AUTHORS  configure.ac  meson.build  meson_options.txt
gtkwave4/contrib/: Makefile.am  meson.build
gtkwave4/contrib/bundle_for_osx/: Info-gtkwave.plist  gtkwave_files.icns
gtkwave4/contrib/fst_jni/: Main.java  fstSupplementalDataType.java
gtkwave4/contrib/rtlbrowse/: definehash.c  fgetdynamic.c  jrb.c  logfile.c  meson.build  splay.h  stem_recurse.c  tcl_helper.c  tree_widget.c  vlex.h  vpp_keyword.gperf  wavelink.h
gtkwave4/contrib/vpi/: acc_user.h  vpi_user.h
gtkwave4/contrib/wlf2vcd/: Makefile.am
gtkwave4/contrib/xml2stems/: meson.build
gtkwave4/examples/: transaction.gtkw
gtkwave4/man/: fst2vcd.1  gtkwave.1  meson.build  vztminer.1
gtkwave4/share/: meson.build
gtkwave4/share/appdata/: gtkwave.appdata.xml
gtkwave4/src/: ae2.c  bitvec.c  bsearch.c  busy.h  clipping.c  clipping.h  color.c  color.h  com.geda.gtkwave.gschema.xml  currenttime.h  discardbuttons.c  edgebuttons.c  entry.c  extload.h  fetchbuttons.c  fgetdynamic.h  file.c  file.h  fonts.c  fonts.h  fst.c  gconf.h  ghw.c  ghw.h  globals.c  globals.h  gnu_regex.c  gtk23compat.c  gtk23compat.h  hierpack.h  hiersearch.c  logfile.c  lx2.h  lxt.c  main.c  marker_dialog.c  marker_dialog.h  markerbox.c  menu.c  meson.build  (+43 more)
gtkwave4/src/cocoa/: meson.build
gtkwave4/src/helpers/: evcd2vcd.c  lxt2miner.c  scopenav.c  (+9 more)
lib/libfst/: CMakeLists.txt  fstapi.c  meson.build
lib/libghw/: libghw.c  libghw.h  meson.build
lib/libgtkwave/: gtkwave.h  meson.build
lib/liblxt/: lxt2_read.h  lxt2_write.c  lxt2_write.h  meson.build
lib/libvzt/: meson.build  vzt_read.c  vzt_read.h  vzt_write.c
lib/libwcp/: meson.build  wcp_protocol.c  wcp_protocol.h  wcp_server.c  wcp_server.h
share/icons/: Makefile.am  meson.build
share/mime/: meson.build  x-gtkwave-extension-ae2.xml  x-gtkwave-extension-aet.xml  x-gtkwave-extension-ghw.xml
src/: Makefile.am  ae2.c  ae2.h  analyzer.c  analyzer.h  baseconvert.c  baseconvert.h  bitvec.c  bsearch.c  bsearch.h  busy.c  busy.h  clipping.c  clipping.h  color.c  color.h  currenttime.c  currenttime.h  debug.c  debug.h  discardbuttons.c  dump_file_main.c  dump_file_main.h  edgebuttons.c  edgebuttons.h  entry.c  entry.h  extload.c  extload.h  fetchbuttons.c  fetchbuttons.h  fgetdynamic.c  fgetdynamic.h  file.c  file.h  fonts.c  fonts.h  fsdb_wrapper_api.cc  fsdb_wrapper_api.h  fst.c  (+159 more)
src/cocoa/: Makefile.am  alert_sheet.m  cocoa_misc.c  cocoa_misc.h
src/helpers/: Makefile.am  evcd2vcd.c  fst2vcd.c  fstminer.c  lxt2_read.h  lxt2miner.c  lxt2vcd.c  meson.build  scopenav.c  shmidcat.c  v2l_analyzer.h  v2l_analyzer_lxt2.h  v2l_debug.c  v2l_debug.h  v2l_debug_lxt2.c  v2l_debug_lxt2.h  vcd2fst.c  vcd2lxt.c  vcd2lxt2.c  vcd2vzt.c  vzt2vcd.c  vzt_read.c  vzt_write.c  vzt_write.h  vztminer.c
src/liblzma/: LzmaLib.c  Makefile.am  meson.build
src/tests/: backend-xid-nonx11.sh
windows/: gtkwave.nsi  gtkwave.nsi.in  gtkwave.rc  meson.build
(+524 files in other folders)
