option(
    'update_mime_database',
    type: 'boolean',
    value: true,
    description: 'run update-mime-database after install',
)

option(
    'struct_packing',
    type: 'boolean',
    value: false,
    description: 'Enable struct packing',
)

option(
    'tcl',
    type: 'feature',
    value: 'auto',
    description: 'Tcl support',
)

option(
    'judy',
    type: 'feature',
    value: 'auto',
    description: 'Judy support',
)

option(
    'manymarkers',
    type: 'boolean',
    value: false,
    description: 'Increase named marker cound from 26 to 702',
)

option(
    'fasttree',
    type: 'boolean',
    value: true,
    description: 'Enable Fast SST Tree widget code',
)

option(
    'experimental_plugin_support',
    type: 'boolean',
    value: false,
    description: 'Enables experimental plugin support',
)

option(
    'libgtkwave_docs',
    type: 'boolean',
    value: false,
    description: 'Build libgtkwave docs',
)

option(
    'introspection',
    type: 'boolean',
    value: true,
    description: 'Generate GObject introspection data',
)

option(
    'tests',
    type: 'boolean',
    value: true,
    description: 'Build tests',
)

option(
    'set_rpath',
    type: 'feature',
    value: 'auto',
    description: 'Set rpath for executables (automatically enabled if the prefix is not /usr)',
)
